--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,7 @@
 .lead__caption {
   margin: 8px 0 0;
   padding: 0;
+  max-width: 160px;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
@@ -8,4 +9,16 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #FFFFFF;  
+}
+
+@media screen and (max-width: 768px){
+  .lead__caption {
+    margin: 8px 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .lead__caption {
+    margin: 8px 0 0 16px;
+  }
 }
