--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,3 +2,24 @@
   max-width: 984px;
   margin: 56px auto 92px;
 }
+
+@media screen and (max-width: 1024px){
+  .lead {
+    max-width: 928px;
+    margin: 48px 48px 92px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .lead {
+    width: 100%;
+    margin: 48px 0 88px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .lead {
+    width: 100%;
+    margin: 48px 0 64px;
+  }
+}
