--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,3 +9,26 @@
   color: #FFFFFF;
   grid-area: title;
 }
+
+@media screen and (max-width: 1024px){
+  .place__title {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .place__title {
+    max-width: 340px;
+    font-size: 42px;
+    line-height: 1.09;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .place__title {
+    max-width: 288px;
+    margin: 0 16px;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
