--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,3 +9,12 @@
   text-align: center;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 320px){
+  .cover__subtitle {
+    max-width: 270px;
+    font-size: 14px;
+    line-height: 1.14;
+    margin: 16px auto 0;
+  }
+}
