--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -30,3 +30,24 @@
 .cover:hover::after {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 1024px){
+  .cover {
+    width: 100%;
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .cover {
+    width: 100%;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .cover {
+    width: 100%;
+    min-height: 200px;
+  }
+}
