--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,10 @@
   line-height: 1.14;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 320px){
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1;
+  }
+}
