--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -5,3 +5,10 @@
   display: flex;
   gap: 18px;
 }
+
+@media screen and (max-width: 320px){
+  .footer__item {
+    flex-direction: column;
+    gap: 32px;
+  }
+}
