--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,30 @@
 .footer {
   max-width: 1184px;
-  margin: 92px auto 0;
-  padding-bottom: 24px;
+  margin: 0 auto;
+  padding: 92px 0 24px;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1024px){
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .footer {
+    max-width: 720px;
+    padding: 88px 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .footer {
+    max-width: 186px;
+    padding: 64px 0 24px 16px;
+    flex-direction: column;
+    margin: 0;
+    gap: 48px;
+  }
 }
