--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,23 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 1024px){
+  .header {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .header {
+    max-width: 720px;
+    padding: 28px 24px 0;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .header {
+    max-width: 288px;
+    padding: 16px 16px 0;
+  }
+}
