--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,3 +8,10 @@
   line-height: 1.07;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 768px){
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
