--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,23 @@
   max-width: 690px;
   padding: 0 442px 92px 148px;  
 }
+
+@media screen and (max-width: 1024px){
+  .intro {
+    padding: 0 286px 92px 48px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .intro {
+    max-width: 720px;
+    padding: 0 24px 88px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .intro {
+    max-width: 288px;
+    padding: 0 16px 64px;
+  }
+}
