--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,3 +9,18 @@
   text-align: center;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 768px){
+  .lead__title {
+    margin: 0 24px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 1.1;
+    margin: 0 auto;
+  }
+}
