--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,3 +6,23 @@
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
 }
+
+@media screen and (max-width: 1024px){
+  .photo-grid {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .photo-grid {
+    max-width: 720px;
+    padding-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .photo-grid {
+    max-width: 288px;
+    padding-bottom: 64px;
+  }
+}
