--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,26 @@
 .place__image {
   max-width: 460px;
-  max-height: 460px;
+  min-height: 460px;
   grid-area: image;
+}
+
+@media screen and (max-width: 1024px){
+  .place__image {
+    max-width: 440px;
+    min-height: 440px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .place__image {
+    max-width: 340px;
+    min-height: 340px;
+  }
+}
+
+@media screen and (max-width: 1024px){
+  .place__image {
+    width: 100%;
+    min-height: 320px;
+  }
 }
