--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,3 +12,17 @@
 .place__paragraph:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 768px){
+  .place__paragraph {
+    font-size: 16px;
+    margin: 0 0 25px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .place__paragraph {
+    font-size: 16px;
+    margin: 0 0 25px;
+  }
+}
