--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,16 @@
   grid-area: website;
   align-self: end;
 }
+
+@media screen and (max-width: 768px){
+  .place__website {
+    max-width: 352px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .place__website {
+    max-width: 288px;
+    margin: 0 16px;
+  }
+}
