--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,3 +6,26 @@
   "image text";
   gap: 48px 40px;
 }
+
+@media screen and (max-width: 1024px){
+  .place {
+    gap: 48px 32px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .place {
+    gap: 48px 28px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .place {
+    gap: 32px;
+    grid-template-areas:
+    "title"
+    "website"
+    "image"
+    "text";
+  }
+}
