--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,3 +5,25 @@
   display: grid;
   gap: 80px;
 }
+
+@media screen and (max-width: 1024px){
+  .places {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .places {
+    max-width: 720px;
+    padding-bottom: 90px;
+    gap: 73px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .places {
+    width: 100%;
+    padding-bottom: 64px;
+    gap: 50px;
+  }
+}
