--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,13 +9,24 @@
 @media screen and (max-width: 1024px){
   .footer {
     max-width: 928px;
+    padding: 92px 48px 24px;
   }
 }
 
 @media screen and (max-width: 768px){
   .footer {
     max-width: 720px;
-    padding: 88px 0 24px;
+    padding: 88px 24px 24px;
+  }
+}
+
+@media screen and (max-width: 650px){
+  .footer {
+    max-width: 186px;
+    padding: 64px 0 24px 16px;
+    flex-direction: column;
+    margin: 0;
+    gap: 48px;
   }
 }
 
