--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,17 +10,16 @@
   color: #FFFFFF;
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 767px){
   .lead__title {
-    margin: 0 24px;
+    font-size: 60px;
   }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 500px){
   .lead__title {
     max-width: 288px;
     font-size: 40px;
     line-height: 1.1;
-    margin: 0 auto;
   }
 }
