--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,14 +12,14 @@
 
 @media screen and (max-width: 768px){
   .lead {
-    width: 100%;
+    max-width: 768px;
     margin: 48px 0 88px;
   }
 }
 
 @media screen and (max-width: 320px){
   .lead {
-    width: 100%;
+    max-width: 320px;
     margin: 48px 0 64px;
   }
 }
