--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,22 +7,22 @@
   gap: 16px;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1279px){
   .photo-grid {
-    max-width: 928px;
+    margin: 0 48px;
   }
 }
 
 @media screen and (max-width: 768px){
   .photo-grid {
-    max-width: 720px;
     padding-bottom: 88px;
+    margin: 0 24px;
   }
 }
 
 @media screen and (max-width: 320px){
   .photo-grid {
-    max-width: 288px;
     padding-bottom: 64px;
+    margin: 0 16px;
   }
 }
