--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,24 +1,27 @@
 .place__image {
   max-width: 460px;
-  min-height: 460px;
   grid-area: image;
 }
 
 @media screen and (max-width: 1024px){
   .place__image {
     max-width: 440px;
-    min-height: 440px;
   }
 }
 
 @media screen and (max-width: 768px){
   .place__image {
     max-width: 340px;
-    min-height: 340px;
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 600px){
+  .place__image {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 320px){
   .place__image {
     width: 100%;
     min-height: 320px;
