--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -15,6 +15,12 @@
   }
 }
 
+@media screen and (max-width: 600px){
+  .place__text {
+    max-width: 600px;
+  }
+}
+
 @media screen and (max-width: 320px){
   .place__text {
     max-width: 288px;
