--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -24,6 +24,14 @@
   }
 }
 
+@media screen and (max-width: 600px){
+  .place__title {
+    max-width: 310px;
+    font-size: 42px;
+    line-height: 1.09;
+  }
+}
+
 @media screen and (max-width: 320px){
   .place__title {
     max-width: 288px;
