--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -9,12 +9,14 @@
 @media screen and (max-width: 1024px){
   .places {
     max-width: 928px;
+    margin: 0 48px;
   }
 }
 
 @media screen and (max-width: 768px){
   .places {
     max-width: 720px;
+    margin: 0 24px;
     padding-bottom: 90px;
     gap: 73px;
   }
@@ -22,7 +24,8 @@
 
 @media screen and (max-width: 320px){
   .places {
-    width: 100%;
+    max-width: 320px;
+    margin: 0;
     padding-bottom: 64px;
     gap: 50px;
   }
